code cleanup
- remove many deprecated calls
- use typed queries
- use enhanced for loops
- use stringbuilders instead of loop concatenation